Saving and loading works now. Consider a standard system in future, such as html, docx, or xml. This uses the branch system from under the hood of jtext pane to get all the attributes rather than look at every character.